add user controller & roles with permissions