@@ -15,7 +15,9 @@ import static com.goan.football.models.Permission.*;
 @RequiredArgsConstructor
 public enum Role {
 
-    USER(Collections.emptySet()),
+    USER(Set.of(
+            USER_READ
+    )),
     ADMIN(
             Set.of(
                     ADMIN_READ,
